Fix button focus style on mobile

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -19,7 +19,7 @@
   transition-timing-function: ease-in-out;
 
   &:hover,
-  &:focus-within {
+  &:focus-visible {
     background-color: var(--color-hover);
   }
 
